@@ -1,3 +1,7 @@
+2003-11-13  Paul Brook  <paul@nowt.org>
+
+	* trans-decl.c (gfc_sym_mangled_function_id): Dont mangle externals.
+
 2003-11-13  Canqun Yang  <canqun@nudt.edu.cn>
 
 	* resolve.c (gfc_resolve): Also resolve EQUIVALENCE objects.
@@ -11,8 +15,8 @@
 
 2003-11-11  Canqun Yang  <canqun@nudt.edu.cn>
  
- 	* options.c (gfc_init_options): Set flag_max_stack_var_size as 32768.
- 	* trans-decl.c (gfc_finish_var_decl): Modified.
+	* options.c (gfc_init_options): Set flag_max_stack_var_size as 32768.
+	* trans-decl.c (gfc_finish_var_decl): Modified.
 
 2003-11-08  Paul Brook  <paul@nowt.org>
 
